--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,9 +15,11 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="X"
         android:id="@+id/textX"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="89dp" />
+        android:textAlignment="center"
+        android:layout_below="@+id/recieveButton"
+        android:layout_alignRight="@+id/textY"
+        android:layout_alignEnd="@+id/textY"
+        android:layout_marginTop="34dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -25,17 +27,8 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Y"
         android:id="@+id/textY"
+        android:layout_marginTop="21dp"
         android:layout_below="@+id/textX"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="41dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Z"
-        android:id="@+id/textZ"
-        android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
     <CheckBox
@@ -52,8 +45,8 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Mode Select"
         android:id="@+id/mode_textView"
-        android:layout_marginTop="67dp"
-        android:layout_below="@+id/textZ"
+        android:layout_marginTop="19dp"
+        android:layout_below="@+id/textY"
         android:layout_centerHorizontal="true" />
 
     <TextView
@@ -61,30 +54,67 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:id="@+id/time_textView"
-        android:layout_marginTop="33dp"
+        android:textAlignment="center"
+        android:textSize="25sp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignLeft="@+id/high_textView"
+        android:layout_alignStart="@+id/high_textView"
+        android:layout_marginTop="11dp"
+        android:layout_alignRight="@+id/highscoreOnline_textView"
+        android:layout_alignEnd="@+id/highscoreOnline_textView" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Highscores"
+        android:text="Highscore"
         android:id="@+id/high_textView"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_marginTop="38dp"
+        android:singleLine="true"
+        android:layout_below="@+id/time_textView"
+        android:layout_toLeftOf="@+id/timetrial_checkBox"
+        android:layout_toStartOf="@+id/timetrial_checkBox" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:id="@+id/highscore_textView"
-        android:layout_alignTop="@+id/time_textView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:layout_below="@+id/high_textView"
         android:layout_alignRight="@+id/high_textView"
         android:layout_alignEnd="@+id/high_textView"
-        android:layout_alignBottom="@+id/textZ" />
+        android:layout_alignLeft="@+id/high_textView"
+        android:layout_alignStart="@+id/high_textView" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:id="@+id/MpHighScore"
+        android:layout_above="@+id/recieveButton"
+        android:layout_alignRight="@+id/highscoreOnline_textView"
+        android:layout_alignEnd="@+id/highscoreOnline_textView"
+        android:layout_alignLeft="@+id/highscoreOnline_textView"
+        android:layout_alignStart="@+id/highscoreOnline_textView" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Recieve"
+        android:id="@+id/recieveButton"
+        android:layout_below="@+id/highscore_textView"
+        android:layout_toRightOf="@+id/timetrial_checkBox"
+        android:layout_toEndOf="@+id/timetrial_checkBox" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Network"
+        android:id="@+id/highscoreOnline_textView"
+        android:layout_alignTop="@+id/high_textView"
+        android:layout_alignLeft="@+id/recieveButton"
+        android:layout_alignStart="@+id/recieveButton" />
+
 
 </RelativeLayout>
